--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
     <header class="header">
-        <div class="container nav-container">
-            <a href="./index.html" class="logo"><span class="logo_span">web</span>studio</a
+      <div class="container nav-container">
+        <a href="./index.html" class="logo"
+          ><span class="logo_span">web</span>studio</a
         >
         <nav class="nav_menu">
           <ul class="menu-item">
@@ -25,16 +31,17 @@
               <a class="menu-link" href="#">Studio</a>
             </li>
             <li class="menu list">
-                <a class="menu-link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu list">
-                <a class="menu-link" href="#">Contacts</a>
+              <a class="menu-link" href="#">Contacts</a>
             </li>
-            </ul>
-            </nav>
-            <ul class="menu-auth">
-                <li class="auth-menu list">
-                    <a class="item-auth" href="mailto:info@devstudio.com">info@devstudio.com</a
+          </ul>
+        </nav>
+        <ul class="menu-auth">
+          <li class="auth-menu list">
+            <a class="item-auth" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
           <li class="auth-menu list">
@@ -140,6 +147,39 @@
                 <h3 class="user-subtitle">Mark Guerrero</h3>
                 <p class="user-text">Product Designer</p>
               </div>
+              <div class="container-social-user">
+                <ul class="user-item-svg">
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-twitter1">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin2"></use>
+                    </svg>
+                  </a>
+                </li>
+                </ul>
+              </div>
             </li>
             <li class="user-item list">
               <img
@@ -151,6 +191,39 @@
               <div class="container-text">
                 <h3 class="user-subtitle">Tom Ford</h3>
                 <p class="user-text">Frontend Developer</p>
+              </div>
+              <div class="container-social-user">
+                <ul class="user-item-svg">
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-twitter1">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin2"></use>
+                    </svg>
+                  </a>
+                </li>
+                </ul>
               </div>
             </li>
             <li class="user-item list">
@@ -164,6 +237,39 @@
                 <h3 class="user-subtitle">Camila Garcia</h3>
                 <p class="user-text">Marketing</p>
               </div>
+              <div class="container-social-user">
+                <ul class="user-item-svg">
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-twitter1">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin2"></use>
+                    </svg>
+                  </a>
+                </li>
+                </ul>
+              </div>
             </li>
             <li class="user-item list">
               <img
@@ -176,6 +282,39 @@
                 <h3 class="user-subtitle">Daniel Wilson</h3>
                 <p class="user-text">UI Designer</p>
               </div>
+              <div class="container-social-user">
+                <ul class="user-item-svg">
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-twitter1">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                  <li class="user-icon-svg list">
+                    <a class="social-icon" href="">
+                    <svg class="user-svg" widht="16" height="16">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin2"></use>
+                    </svg>
+                  </a>
+                </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -184,34 +323,106 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
+          <div class="container-cusctomers-icon">
+            <ul class="user-list">
+              <li class="icons-list-customers list">
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo"
+                  >
+                  </use>
+                </svg>
+              </li>
+              <li class="icons-list-customers list">
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-1"
+                  >
+                  </use>
+                </svg>
+              </li>
+              <li class="icons-list-customers list">
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-2"
+                  >
+                  </use>
+                </svg>
+              </li>
+              <li class="icons-list-customers list">
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-3"
+                  >
+                  </use>
+                </svg>
+              </li>
+              <li class="icons-list-customers list">
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-4"
+                  >
+                  </use>
+                </svg>
+              </li>
+              <li class="icons-list-customers list">
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-5"
+                  >
+                  </use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="" class="logo"
-          ><span class="logo_span">web</span
-          ><span class="logo_footer">studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <ul class="action">
-        <li><a href=""></a></li>
-                <li>
-                    <a href="">ffff</a>
+        <div class="container-footer">
+          <a href="" class="logo"
+            ><span class="logo_span">web</span
+            ><span class="logo_footer">studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-social">
+          <h3 class="text-social">Social media</h3>
+          <ul class="footer-icon">
+            <li class="icon-footer-svg list">
+              <a class="icons-button" href="">
+                <svg class="icon-svg" widht="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-instagram1"
+                  ></use>
+                </svg>
+              </a>
+               </li>
+                <li class="icon-footer-svg list">
+                    <a class="icons-button" href="">
+                        <svg class="icon-svg" widht="24" height="24">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-twitter1"></use>
+                  </svg>
+                    </a>
                 </li>
-                <li>
-                    <a href=""></a>
+                <li class="icon-footer-svg list">
+                    <a class="icons-button" href="">
+                        <svg class="icon-svg" widht="24" height="24">
+                          <use href="./images/icons.svg/symbol-defs.svg#icon-facebook1"></use>
+                  </svg>
+                    </a>
                 </li>
-                <li>
-                    <a href=""></a>
-                </li>
-            </ul>
-            </footer>
-</body>
+                <li class="icon-footer-svg list">
+                    <a class="icons-button" href="">
+                        <svg class="icon-svg" widht="24" height="24">
+                          <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin2"></use>
 
+                  </svg>
+                    </a>
+                </li> 
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
