--- a/portfolio.html
+++ b/portfolio.html
@@ -183,16 +183,58 @@
         </div>
         </section>
         </main>
+        <!-- Footer -->
         <footer class="footer">
-            <div class="container">
-                <a href="" class="logo"><span class="logo_span">web</span
-          ><span class="logo_footer">studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-    </footer>
-  </body>
+          <div class="container">
+            <div class="container-footer">
+              <a href="" class="logo"
+                ><span class="logo_span">web</span
+                ><span class="logo_footer">studio</span></a
+              >
+              <p class="footer-text">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+            <div class="container-social">
+              <h3 class="text-social">Social media</h3>
+              <ul class="footer-icon">
+                <li class="icon-footer-svg list">
+                  <a class="icons-button" href="">
+                    <svg class="icon-svg" widht="24" height="24">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-instagram1"
+                      ></use>
+                    </svg>
+                  </a>
+                   </li>
+                    <li class="icon-footer-svg list">
+                        <a class="icons-button" href="">
+                            <svg class="icon-svg" widht="24" height="24">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-twitter1"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="icon-footer-svg list">
+                        <a class="icons-button" href="">
+                            <svg class="icon-svg" widht="24" height="24">
+                              <use href="./images/icons.svg/symbol-defs.svg#icon-facebook1"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="icon-footer-svg list">
+                        <a class="icons-button" href="">
+                            <svg class="icon-svg" widht="24" height="24">
+                              <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin2"></use>
+    
+                      </svg>
+                        </a>
+                    </li> 
+                </li>
+              </ul>
+            </div>
+          </div>
+        </footer>
+</body>
+
 </html>
