--- a/index.html
+++ b/index.html
@@ -316,48 +316,60 @@
         <div class="container">
           <h2 class="section-title">Customers</h2>
           <div class="container-cusctomers-icon">
-            <ul class="user-list">
+              <ul class="user-list">
+                <li class="icons-list-customers list">
+                  <a class="icon-svg-link-customers" href="">
+                    <svg class="icon-customers" width="104" height="56">
+                      <use href="./images/icons.svg/symbol-defs.svg#icon-Logo"
+                      >
+                      </use>
+                    </svg> 
+                  </a>
+                </li>
               <li class="icons-list-customers list">
+                <a class="icon-svg-link-customers" href="">
                   <svg class="icon-customers" width="104" height="56">
-                    <use href="./images/icons.svg/symbol-defs.svg#icon-Logo"
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-1"
                     >
                     </use>
-                  </svg>  
+                  </svg>
+                </a>
               </li>
               <li class="icons-list-customers list">
-                <svg class="icon-customers" width="104" height="56">
-                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-1"
-                  >
-                  </use>
-                </svg>
+                <a class="icon-svg-link-customers" href="">
+                  <svg class="icon-customers" width="104" height="56">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-2"
+                    >
+                    </use>
+                  </svg>
+                </a>
               </li>
               <li class="icons-list-customers list">
-                <svg class="icon-customers" width="104" height="56">
-                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-2"
-                  >
-                  </use>
-                </svg>
+                <a class="icon-svg-link-customers" href="">
+                  <svg class="icon-customers" width="104" height="56">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-3"
+                    >
+                    </use>
+                  </svg>
+                </a>
               </li>
               <li class="icons-list-customers list">
-                <svg class="icon-customers" width="104" height="56">
-                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-3"
-                  >
-                  </use>
-                </svg>
+                <a class="icon-svg-link-customers" href="">
+                  <svg class="icon-customers" width="104" height="56">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-4"
+                    >
+                    </use>
+                  </svg>
+                </a>
               </li>
               <li class="icons-list-customers list">
-                <svg class="icon-customers" width="104" height="56">
-                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-4"
-                  >
-                  </use>
-                </svg>
-              </li>
-              <li class="icons-list-customers list">
-                <svg class="icon-customers" width="104" height="56">
-                  <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-5"
-                  >
-                  </use>
-                </svg>
+                <a class="icon-svg-link-customers" href="">
+                  <svg class="icon-customers" width="104" height="56">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-Logo-5"
+                    >
+                    </use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
